--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ thiserror = "2.0.16"
 anyhow = "1.0.99"
 tracing-subscriber = "0.3.20"
 tracing = "0.1"
+async-trait = "0.1.89"
 
 # database
 rusqlite = "0.32.0"
@@ -16,5 +17,6 @@ r2d2_sqlite = "0.25.0"
 r2d2 = "0.8.10"
 
 # local
-wallet = { path = "/Users/user/oss-contributions/paynet/crates/libs/wallet" }
-starknet-types = { path = "/Users/user/oss-contributions/paynet/crates/libs/starknet/types" }
+wallet = { git = "https://github.com/nutty-raccoon/paynet" }
+starknet-types = { git = "https://github.com/nutty-raccoon/paynet" }
+parse-asset-amount = { git = "https://github.com/nutty-raccoon/paynet" }
